Spēles noteikumu update

--- a/spelesNoteikumi.html
+++ b/spelesNoteikumi.html
@@ -23,6 +23,6 @@
         <div class="noteikumiTeksts" style="margin-left:10px"><p> &nbsp  &nbsp Šajā atmiņas spēlē Jums pēc iespējas īsākā laikā būs nepieciešams atrast divus
           vienādus attēlus. Pirms spēles sākšanas lūgums ievadīt savu vārdu, vecumu un izvēlēties, no kuras Latvijas reģiona Jūs esat.
           Vārds parādīsies spēlētāju topā, kurā nonāksiet, ja vēlēsieties.
-          No sākuma ir 100 punkti. Par katru reizi, kad nolikšķina, lai apsaktītu attēlu, 
+          No sākuma ir 50 punkti. Par katru reizi, kad atver divus attēlus, 
           punktu skaits samazinās par 1.</p>
         </div>
