Pēdējie labojumi spēlei pirms pabeigšanas

--- a/parAutoru.html
+++ b/parAutoru.html
@@ -10,11 +10,11 @@
   <div class="logo"><a href = "index.html"><img src = logo.png alt="logo" width="80px" height="80px"><img src = bulta.png alt="bulta" width="50px" height="20px"></a></div> 
   <div style="width:700px; height: 5px; margin-top: auto;  margin-left: 300px; font-size: xx-large;"></div>
         <br>
-        <div class ="noteikumi" style="width:700px; height: 80px; margin-left: 500px; font-size: xx-large;"><h2>Par Autoru</h2></div>
+        <div class ="noteikumi" style="width:700px; height: 80px; margin-left: 500px; font-size: x-large;"><h2>Par Autoru</h2></div>
         <br>
         <br>
 
-<div class ="autors" style><img src="es.jpg" alt="Autora bilde" width="250px" height="375px" style="float:right; margin-right: 700px;" />
+<div class ="autors" style><img src="es.jpg" alt="Autora bilde" width="250px" height="375px" style="float:right; margin-right: 900px;" />
   </div>
   <div class="noteikumiTeksts" style="margin-left:10px">&nbsp  &nbsp Čau! Mani sauc Elza, un es cenšos programmēt!
     Šī ir mana otrā izveidotā spēle (neskaitot nokopētos kodus no indiešu youtuberiem).
