--- a/spele.html
+++ b/spele.html
@@ -21,15 +21,14 @@
             </h1>
             <ul>
                 <li><a href="spele.html">Spēle</a>
-                <li><a href="speletajuTops.html">TOP spēlētāji</a></li>
                 <li><a href="parAutoru.html">Par autoru</a></li>
                 </li>
             </ul>
         </div>
-        <p> <canvas id="sekundes" class="laiks" width="100" height="30" style="border:2px solid black;
+        <canvas id="sekundes" class="laiks" width="100" height="30" style="border:2px solid black;
             background-color:#4C3B4D;">
             </canvas>
-        </p>
+       
         <section class="atminasSpele">
 
             <div class="kartite" data-framework="bilde1">
