--- a/spelesNoteikumi.html
+++ b/spelesNoteikumi.html
@@ -17,12 +17,14 @@
         <div class="logo"><a href = "index.html"><img src = logo.png alt="logo" width="80px" height="80px"><img src = bulta.png alt="bulta" width="50px" height="20px"></a></div> 
         <div style="width:700px; height: 5px; margin-top: auto;  margin-left: 300px; font-size: xx-large;"></div>
         <br>
-        <div class ="noteikumi" style="width:700px; height: 80px; margin-left: 500px; font-size: xx-large;"><h2>Spēles noteikumi</h2></div>
+        <div class ="noteikumi" style="width:700px; height: 80px; margin-left: 500px; font-size: x-large;"><h2>Spēles noteikumi</h2></div>
         <br>
         <br>
-        <div class="noteikumiTeksts" style="margin-left:10px"><p> &nbsp  &nbsp Šajā atmiņas spēlē Jums pēc iespējas īsākā laikā būs nepieciešams atrast divus
-          vienādus attēlus. Pirms spēles sākšanas lūgums ievadīt savu vārdu, vecumu un izvēlēties, no kuras Latvijas reģiona Jūs esat.
+        <div class="noteikumiTeksts" style="margin-left:10px"><p> &nbsp  &nbsp Šajā atmiņas spēlē Jums 60 sekunžu laikā ir jāatrod katrai kartītei pāris.
+          Pirms spēles sākšanas lūgums ievadīt savu vārdu, vecumu un izvēlēties, no kuras Latvijas reģiona Jūs esat.
           Vārds parādīsies spēlētāju topā, kurā nonāksiet, ja vēlēsieties.
           No sākuma ir 50 punkti. Par katru reizi, kad atver divus attēlus, 
-          punktu skaits samazinās par 1.</p>
+          punktu skaits samazinās par 1. Pēc laika beigšanās tiek parādīts, cik punkuts
+          esi ieguvis. Ja vēlies, pēc laika beigšanās vari turpināt spēli, lai katram attēlam
+          sameklētu pāri.</p>
         </div>
